--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     }
     </style>
 <head> 
-<body style = "background: url(picture.jpg);background-position:center;background-repeat:no-repeat;background-size: cover;background-attachment: fixed;">
+<body style = "background-color: #772;background: url(picture.jpg);background-position:center;background-repeat:no-repeat;background-size: cover;background-attachment: fixed;">
     <!-- <div style = "float: left; vertical-align: top; padding-top: 0px; padding-top: 0px; "> -->
-        <p class = "customfont" style = "padding-left:50px;padding-top:69px; color:#f19; font-size: 150px; text-align: center;"><span style="padding-right:30px; padding-left:30px; padding-bottom:13px; padding-top:0px;">ilia.xyz</head></p>
+        <p class = "customfont" style = "/* padding-left:50px; */padding-top:69px; color:#f19; font-size: 150px; text-align: center;"><span style="padding-right:30px; padding-left:30px; padding-bottom:13px; padding-top:0px;">ilia.xyz</head></p>
         <div style="margin: auto; display: table;margin-top:-111px;">
-        <p class = "customfont" style = "float: left; padding-left:50px; color:#f19; font-size: 70px;text-align: center;"><span style="padding-right:30px; padding-left:30px; padding-bottom:13px; padding-top:0px;">fghjkl</head></p>
+        <p class = "customfont" style = "float: left; /* padding-left:50px;  */color:#f19; font-size: 70px;text-align: center;"><span style="padding-right:30px; padding-left:30px; padding-bottom:13px; padding-top:0px;">fghjkl</head></p>
         <p class = "customfont" style = "float: left; padding-left:50px;  color:#f19; font-size: 70px;"><span style="padding-right:30px; padding-left:30px; padding-bottom:13px; padding-top:0px;">abcd</head></p>
         </div>
     <!-- </div> -->
