--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
         font-family: "MyMonoSpaceFontTHICK";
         src: url(TexgyrecursorBold-V7Rw.otf) format("opentype");
     }
-    span { background-color:rgba(0,0,0,0.79); padding-right:3px; padding-left:3px; padding-bottom:5px; padding-top:0px; /* margin: 10px; */ }
+    span {
+        background-color:rgba(0,0,0,0.69);
+        padding-right:3px;
+        padding-left:3px;
+        padding-bottom:5px;
+        padding-top:0px; /* margin: 10px; */
+    }
     .customfont { 
         font-family: "MyMonoSpaceFont", 'Courier New', Courier, monospace;
     }
@@ -17,14 +23,27 @@
         /* font-family: "MyMonoSpaceFontTHICK", 'Courier New', Courier, monospace; */
         font-family: Garamond, "Times New Roman", serif;
     }
+    .zoomable {
+        transition: transform 0.3s;
+    }
+    .zoomable:hover {
+        transform: scale(1.069);
+    }
+    a {
+        color: #fff;
+        text-decoration: inherit;
+        /* background: blue; */
+        /*etc.*/
+    }
     </style>
 <head> 
 <body style = "background-color: #772;background: url(picture.jpg);background-position:center;background-repeat:no-repeat;background-size: cover;background-attachment: fixed;">
     <!-- <div style = "float: left; vertical-align: top; padding-top: 0px; padding-top: 0px; "> -->
-        <p class = "customfont" style = "/* padding-left:50px; */padding-top:69px; color:#f19; font-size: 150px; text-align: center;"><span style="padding-right:30px; padding-left:30px; padding-bottom:13px; padding-top:0px;">ilia.xyz</head></p>
+        <p class = "customfont" style = "/* padding-left:50px; */padding-top:69px; margin-bottom: 160px; color:#f19; font-size: 60px; text-align: center;"><span style="padding-right:30px; padding-left:30px; padding-bottom:13px; padding-top:0px;">Ilia Sibiryakov</head></p>
         <div style="margin: auto; display: table;margin-top:-111px;">
-        <p class = "customfont" style = "float: left; /* padding-left:50px;  */color:#f19; font-size: 70px;text-align: center;"><span style="padding-right:30px; padding-left:30px; padding-bottom:13px; padding-top:0px;">fghjkl</head></p>
-        <p class = "customfont" style = "float: left; padding-left:50px;  color:#f19; font-size: 70px;"><span style="padding-right:30px; padding-left:30px; padding-bottom:13px; padding-top:0px;">abcd</head></p>
+        <p class = "customfont zoomable" style = "float: left; /* padding-left:50px;  */color:#f19; font-size: 33px;text-align: center;"><span style="padding-right:30px; padding-left:30px; padding-bottom:13px; padding-top:5px;"><a href="https://youtube.com/iliasibiryakov">Youtube</a></head></p>
+            <p class = "customfont zoomable" style = "float: left; padding-left:50px;  color:#f19; font-size: 33px;"><span style="padding-right:30px; padding-left:30px; padding-bottom:13px; padding-top:5px;"><a href="https://github.com/ilia3101">GitHub</a></head></p>
+                <p class = "customfont zoomable" style = "float: left; padding-left:50px;  color:#f19; font-size: 33px;"><span style="padding-right:30px; padding-left:30px; padding-bottom:13px; padding-top:5px;"><a href="https://mlv.app">MLV App</a></head></p>
         </div>
     <!-- </div> -->
         <!-- <div style="  display: table; padding-top:00px; padding-bottom:37px; margin: 0 auto; max-width: 100vw;">
